GNOME Bugzilla – Bug 532406
gnome-lockscreen should not be translatable
Last modified: 2010-02-17 23:49:21 UTC
I suspect that the translatable string in following code is an error: gnome_desktop_item_set_string ( ditem, GNOME_DESKTOP_ITEM_ICON, _("gnome-lockscreen")); Moreover, the category in GNOME_DESKTOP_ITEM_CATEGORIES, "GNOME;Application;" is not valid (see http://live.gnome.org/GnomeGoals/ApplicationCategory)
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.