[main-menu] Don't mark icon name as translatable

While the desktop entry spec says an icon can be localized, in practice,
translators don't want to do this.

https://bugzilla.gnome.org/show_bug.cgi?id=532406